--- a/CHMvIR_kursach/CMakeLists.txt
+++ b/CHMvIR_kursach/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_C_STANDARD 99)
 add_executable(LagrangePolynomial LagrangePolynomial.c)
 add_executable(JordanMethod JordanMethod.c)
 add_executable(Algorithms Algorithms.c)
+add_executable(test test.c)
