--- a/ServiceOrientedArch/lab5/package.json
+++ b/ServiceOrientedArch/lab5/package.json
@@ -11,6 +11,8 @@
     "@admin-bro/express": "^3.1.0",
     "@admin-bro/mongoose": "^1.1.0",
     "admin-bro": "^4.0.1",
+    "admin-bro-users-permissions": "^1.0.4",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
